storage: convert SegmentLoaderImpl to perform some tasks asynchronously